fix scroll lock on safari

--- a/src/app/styles/app.scss
+++ b/src/app/styles/app.scss
@@ -26,6 +26,7 @@ body {
 
 .app-lock-scroll {
   overflow-y: hidden;
+  max-height: 100vh;
 }
 
 .d-none-medium-or-less {
